force-app/main/default/objects/Account/fields/Type_of_Organization__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Organization__c</fullName>
    <description>List of organization types associated with Entrepreneurship Services.</description>
    <inlineHelpText>List of organization types associated with Entrepreneurship Services.</inlineHelpText>
    <label>Type of Organization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biz Support - Accelerator</fullName>
            </value>
            <value>
                <fullName>Biz Support - Association</fullName>
            </value>
            <value>
                <fullName>Biz Support - Finance</fullName>
            </value>
            <value>
                <fullName>Biz Support - Incubator</fullName>
            </value>
            <value>
                <fullName>Biz Support - Mentor</fullName>
            </value>
            <value>
                <fullName>Biz Support - Not-For-Profit</fullName>
            </value>
            <value>
                <fullName>Biz Support - Partner</fullName>
            </value>
            <value>
                <fullName>Biz Support - Pre-Incubation</fullName>
            </value>
            <value>
                <fullName>Biz Support - Research</fullName>
            </value>
            <value>
                <fullName>Client - BIC</fullName>
            </value>
            <value>
                <fullName>Client - ET</fullName>
            </value>
            <value>
                <fullName>Govt - Federal</fullName>
            </value>
            <value>
                <fullName>Govt - International</fullName>
            </value>
            <value>
                <fullName>Govt - Local</fullName>
            </value>
            <value>
                <fullName>Govt - Provincial</fullName>
            </value>
            <value>
                <fullName>Media - Channel Partner</fullName>
            </value>
            <value>
                <fullName>Media - Community</fullName>
            </value>
            <value>
                <fullName>Media - StartUp</fullName>
            </value>
            <value>
                <fullName>Biz Support - Academic Institution</fullName>
            </value>
            <value>
                <fullName>Biz Support - Business (General)</fullName>
            </value>
            <value>
                <fullName>Biz Support - Business (International)</fullName>
            </value>
            <value>
                <fullName>Biz Support - Distributor</fullName>
            </value>
            <value>
                <fullName>Biz Support - Supplier</fullName>
            </value>
            <value>
                <fullName>Client - Incubator</fullName>
            </value>
            <value>
                <fullName>Clinical - Hospital</fullName>
            </value>
            <value>
                <fullName>Clinical - Laboratory</fullName>
            </value>
            <value>
                <fullName>Retail - General</fullName>
            </value>
            <value>
                <fullName>Retail - Grocery</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>