force-app/main/default/objects/Account/fields/Type_of_Registration_BNR__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Registration_BNR__c</fullName>
    <label>Type of Registration (BNR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Operating Name of Existing Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>