force-app/main/default/objects/Account/fields/Year_Business_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Business_Started__c</fullName>
    <description>The Date the Company or Organization started</description>
    <label>Year Business Started</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>1750</fullName>
            </value>
            <value>
                <fullName>1751</fullName>
            </value>
            <value>
                <fullName>1752</fullName>
            </value>
            <value>
                <fullName>1753</fullName>
            </value>
            <value>
                <fullName>1754</fullName>
            </value>
            <value>
                <fullName>1755</fullName>
            </value>
            <value>
                <fullName>1756</fullName>
            </value>
            <value>
                <fullName>1757</fullName>
            </value>
            <value>
                <fullName>1758</fullName>
            </value>
            <value>
                <fullName>1759</fullName>
            </value>
            <value>
                <fullName>1760</fullName>
            </value>
            <value>
                <fullName>1761</fullName>
            </value>
            <value>
                <fullName>1762</fullName>
            </value>
            <value>
                <fullName>1763</fullName>
            </value>
            <value>
                <fullName>1764</fullName>
            </value>
            <value>
                <fullName>1765</fullName>
            </value>
            <value>
                <fullName>1766</fullName>
            </value>
            <value>
                <fullName>1767</fullName>
            </value>
            <value>
                <fullName>1768</fullName>
            </value>
            <value>
                <fullName>1769</fullName>
            </value>
            <value>
                <fullName>1770</fullName>
            </value>
            <value>
                <fullName>1771</fullName>
            </value>
            <value>
                <fullName>1772</fullName>
            </value>
            <value>
                <fullName>1773</fullName>
            </value>
            <value>
                <fullName>1774</fullName>
            </value>
            <value>
                <fullName>1775</fullName>
            </value>
            <value>
                <fullName>1776</fullName>
            </value>
            <value>
                <fullName>1777</fullName>
            </value>
            <value>
                <fullName>1778</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>