force-app/main/default/objects/Account/validationRules/Account_Business_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Business_Name_Validation_Rule</fullName>
    <active>true</active>
    <description>This rule will avoid creating Business Account records that starts with special character.</description>
    <errorConditionFormula>AND(NOT(IsPersonAccount), NOT(REGEX((LEFT( Name , 1)), &quot;[a-zA-Z0-9]&quot;)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name can not start with any special character.</errorMessage>
</ValidationRule>