force-app/main/default/objects/Account/validationRules/Account_Shipping_Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Shipping_Postal_Code_Validation</fullName>
    <active>true</active>
    <description>This Validation rule will check if Country is Canada than Postal code should be in correct format.</description>
    <errorConditionFormula>AND( $User.ProfileId&lt;&gt;&#39;00eo0000000wf4I&#39;, 
ShippingCountry = &quot;Canada&quot;, 
NOT(REGEX(ShippingPostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)),OR(ISNEW(),ISCHANGED(ShippingPostalCode)) 
)</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Please Enter Valid Mailing Postal Code</errorMessage>
</ValidationRule>