force-app/main/default/objects/Account/validationRules/Account_Type_Validation_for_Business_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Validation_for_Business_Acc</fullName>
    <active>true</active>
    <description>This validation rule is to avoid creating Business Account without specifying any value in Account Type.</description>
    <errorConditionFormula>AND(NOT(IsPersonAccount),ISBLANK(TEXT(Account_Type__c)))</errorConditionFormula>
    <errorDisplayField>Account_Type__c</errorDisplayField>
    <errorMessage>Account Type can not be blank for Business Account</errorMessage>
</ValidationRule>