force-app/main/default/objects/Account/validationRules/BIA_Board_Size_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>BIA_Board_Size_Validation</fullName>
    <active>true</active>
    <description>This validation rule ensure the Board Size is sum of Vacancies and standing member</description>
    <errorConditionFormula>Board_Size__c  &lt;&gt;  (Vacancies__c+Standing_Members__c)</errorConditionFormula>
    <errorDisplayField>Board_Size__c</errorDisplayField>
    <errorMessage>Board size should be sum of Vacancies and Standing Members.</errorMessage>
</ValidationRule>