force-app/main/default/objects/Account/validationRules/Client_to_Prospect_Conversion_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_to_Prospect_Conversion_Validation</fullName>
    <active>true</active>
    <description>This rule avoid converting Account Type from Client to Prospect if there are any related child record exist.</description>
    <errorConditionFormula>AND(Related_Child_Interactions__c &gt; 0, ISCHANGED(Account_Type__c), ISPICKVAL(Account_Type__c,&#39;Business Prospect&#39;))</errorConditionFormula>
    <errorDisplayField>Account_Type__c</errorDisplayField>
    <errorMessage>Account Type can not be changed to Prospect as it has related child records.</errorMessage>
</ValidationRule>