force-app/main/default/objects/Account/validationRules/Person_Account_Email_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_Email_Validation_Rule</fullName>
    <active>true</active>
    <description>This rule will avoid creating Person Account records without Email</description>
    <errorConditionFormula>AND(IsPersonAccount,ISBLANK(PersonEmail))</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Person Account Email can not be blank.</errorMessage>
</ValidationRule>