force-app/main/default/objects/Account/validationRules/Person_Account_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_Name_Validation_Rule</fullName>
    <active>true</active>
    <description>This rule will avoid creating Person Account records that starts with special character.</description>
    <errorConditionFormula>AND(IsPersonAccount, OR(AND(NOT(ISBLANK(FirstName)),NOT(REGEX((LEFT( FirstName , 1)), &quot;[a-zA-Z0-9]&quot;))), NOT(REGEX((LEFT( LastName , 1)), &quot;[a-zA-Z0-9]&quot;))))</errorConditionFormula>
    <errorMessage>Person Account First or Last Name can not start with any special character.</errorMessage>
</ValidationRule>