force-app/main/default/objects/Account/listViews/All_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Active__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAICS_6_Digit__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Created_by__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Business Accounts</label>
</ListView>