force-app/main/default/objects/Account/listViews/All_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>Active__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Created_by__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsPersonAccountCheck__pc</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All Person Accounts</label>
</ListView>